[gd_scene load_steps=5 format=3 uid="uid://bvfi27d444gb6"]

[ext_resource type="Script" path="res://Scene/Dialog/value_changer_dialog.gd" id="1_nx17t"]
[ext_resource type="Texture2D" uid="uid://7n1h0rittmlo" path="res://Asset/close_icon.svg" id="3_vg4ch"]
[ext_resource type="PackedScene" uid="uid://c3a7n8undfoen" path="res://Scene/attribute_grid_container.tscn" id="4_ns67g"]
[ext_resource type="Script" path="res://Scene/Dialog/values_grid_container.gd" id="6_yoy0o"]

[node name="ValueChangerDialog" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nx17t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.270588, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleValue" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Title"

[node name="CloseButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
text = "Close"
icon = ExtResource("3_vg4ch")

[node name="AttributeGridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_ns67g")]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateItemContainer" type="CenterContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CreateItemButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/CreateItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Create Item"

[node name="ValuesGridContainer" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 2
columns = 2
script = ExtResource("6_yoy0o")

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/CreateItemContainer/CreateItemButton" to="." method="_on_create_item_pressed"]
